# moteur-de-jeu

./: .gitattributes  .gitignore  AIDE_AVEC_GIT.md  COURS_RUST.md  Cargo.toml  Cours_Rust.md  README.md  line_counts.sh
RAPPORTS/: CHOIX.md  choix.md
RAPPORTS/diagrames/: .#threads.txt  graphics.txt
RAPPORTS/rapports_de_projet/: README.md
RAPPORTS/réunions_avec_prof/: 1 - 07 octobre 2019 - Amaury.md  2.1 - 17 octobre 2019 - Ajouts Sylvain Glaize.txt  4 - 18 novembre 2019 - Notes Amaury.md  5 - 20 decembre 2019 - Retours Sylvain Glaize.md  6 - 21 janvier 2019 - Notes Amaury.md  6.1 - 21 janvier 2019 - Retours Sylvain Glaize.md  7 - 21 janvier 2019 - Retours Sylvain Glaize.md  7 - 23 janvier 2019 - Notes Amaury.md
base/: Cargo.toml
base/ressources/: lol
base/src/: base.rs  errors.rs  lib.rs
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/base/: all.html  index.html  sidebar-items.js  struct.Base.html  struct.EngineError.html
doc/events_handling/: all.html  enum.Button.html  (+5 more)
ecs/: Cargo.toml
ecsa/: Cargo.toml
events_handling/: Cargo.toml
examples/: example.rs  phong.rs  specs.rs  test_phy.rs
graphics/: Cargo.toml  aliases.js  settings.html  source-files.js
graphics/examples/: example.rs  phong.rs
graphics/graphics/: all.html  index.html  sidebar-items.js
graphics/graphics/engine/: index.html  sidebar-items.js
graphics/graphics/engine/camera/: index.html  sidebar-items.js  struct.Camera.html
graphics/graphics/engine/frame/: index.html  sidebar-items.js  struct.Frame.html  struct.Similarity.html
graphics/graphics/engine/graphical/: index.html  sidebar-items.js  struct.Display.html  struct.Graphical.html  struct.Params.html  struct.Program.html
graphics/graphics/misc/: fn.get_ressources_path.html  fn.maybe.html  fn.normalize_vec.html  fn.read_file.html  fn.v_prod.html  index.html  sidebar-items.js
graphics/graphics/processing/: index.html  sidebar-items.js
graphics/graphics/processing/group/: index.html  sidebar-items.js  struct.Group.html
graphics/graphics/processing/material/: enum.Material.html  index.html  sidebar-items.js
graphics/graphics/processing/modelsholder/: index.html  sidebar-items.js  struct.ModelsHolder.html
graphics/graphics/processing/objects/: index.html  sidebar-items.js  struct.Object.html  struct.Objects.html
graphics/graphics/processing/vertex/: index.html  sidebar-items.js  struct.Vertex.html
graphics/ressources/: red_cube.mtl  reds.mtl  teto.mtl
graphics/ressources/shaders/default/: fragment.glsl
graphics/ressources/shaders/nontextured/: vertex.glsl
graphics/ressources/shaders/textured/: fragment.glsl  vertex.glsl
graphics/ressources/shaders/textured_2d/: vertex.glsl
graphics/src/: #main.rs#  #old_graphical.rs#  .#main.rs  lib.rs  main.rs  misc.rs  objects.rs~  old_frame.rs  old_graphical.rs  old_main.rs  tests.rs  textured_cube.mtl
graphics/src/engine/: #graphical.rs#  .#graphical.rs  Programs  camera.rs  camera.rs~  display.rs  frame.rs  frame.rs~  graphical.rs  graphical.rs~  graphicnot  mod.rs  mod.rs~  params.rs  programs.rs
graphics/src/processing/: #material.rs#  .#objects.rs  group.rs  material.rs  material.rs~  misc.rs~  mod.rs  modelsholder.rs  objects.rs  objects.rs~  ressources_holder.rs  scene.rs  vertex.rs  vertex.rs~
graphics/src/ressource_handling/: group.rs  holder.rs  light.rs  material.rs  mod.rs  object.rs  objects.rs  programs_register.rs  register.rs  ressources_holder.rs  scene.rs  tile.rs  vertex.rs  wavefront.rs  wavefronts_holder.rs
physics/: Cargo.toml  aliases.js  search-index.js  settings.html  source-files.js
physics/examples/: example.rs
physics/ressources/: textured_cube.mtl
physics/src/: lib.rs  main.rs  misc.rs  physics.rs
physics/src/shapes/: ball.rs  capsule.rs  compound.rs  convexhull.rs  cuboid.rs  heightfield.rs  mod.rs  plane.rs  polyline.rs  segment.rs  triangle.rs  trimesh.rs
rapports/: A_LIRE.md  Articles à lire.md
ressources/: all_objects_saloon.mtl  bouteille.mtl  candle.mtl  chaise.mtl  chandelier.mtl  lit_double.mtl  maison.mtl  porte_chambre.mtl  porte_entree.mtl  saloon.mtl  sphere_smooth.mtl  table.mtl  tabourets.mtl  terrain.mtl  teto.mtl  transparent_sphere.mtl  verres.mtl
sounds/: Cargo.toml
src/: .#problem.rs  components.rs  game.rs  game_event.rs  game_state.rs  lib.rs  main.rs
state_stack/: Cargo.toml
test_ui2/: Cargo.toml
(+293 files in other folders)
