[package]
name = "moteur_jeu_video"
version = "0.0.1"
authors = [ "Clément CHOMICKI",
            "Alexandre LEBLON",
            "Maÿlis MONTANI",
            "Barbara PARE",
            "Amaury BARUZY",
            "Nicolas GOISLARD",
            "Sébastien ZHOU",
            "Hugo DELADRIERE"
          ]
edition = "2018" # Edition de Rust

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bibliothèque SDL2, permettant d'utiliser OpenGL
# Article suivi : https://nercury.github.io/rust/opengl/tutorial/2018/02/08/opengl-in-rust-from-scratch-01-window.html
# MEGA IMPORTANT : Sur Linux, il faut installer la librairie :
# sudo apt install libsdl2-dev
# Sur Windows... https://nercury.github.io/rust/opengl/tutorial/2018/02/08/opengl-in-rust-from-scratch-01-window.html#initializing-sdl
sdl2 = "*"
anymap = "*"