[package]
name = "graphics"
version = "0.1.0"
authors = ["technolapin <clement.chomicki@protonmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
glium="0.25.1"
glutin="0.21.2"

genmesh = "0.6"
obj = { version = "0.9", features = ["genmesh"] }
rand = "0.7"
