[package]
name = "graphics"
version = "0.1.0"
authors = ["technolapin <clement.chomicki@protonmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
glium="0.26"
glutin="0.24"

genmesh = "0.6"
obj = { version = "0.9", features = ["genmesh"] }
rand = "0.7"
image = "*"

rayon="*"

nalgebra = "0.19.0"
nalgebra-glm="0.5.0"

base = { path = "../base" }
events_handling = {path = "../events_handling"}