[package]
name = "physics"
version = "0.1.0"
authors = ["Neoxes <neoxes38@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nphysics2d = "0.13.1"
ncollide2d= "0.21.0"
nphysics3d = "0.13.1"
ncollide3d = "0.21.0"
nalgebra = "0.19.0"
generational-arena = "0.2.7"